--- a/src/style/navBar.css
+++ b/src/style/navBar.css
@@ -167,6 +167,7 @@ nav .nav-lists {
   padding: 0.8rem;
   margin: 0 auto;
   transition: all 0.3s ease-in-out;
+  list-style: none;
 }
 .showSideNav li:hover {
   width: 95%;
